Update and rename Readme to README

--- a/Microbiota/README
+++ b/Microbiota/README
@@ -1,1 +1,3 @@
 #Code used for downloading, evaluating, preparing, analyzing and visualizing microbiota data
+
+#Microbiota metadata was collected manually and evaluated. It
